Семинар 5 Задача hous9.java